src/test/deca/context/invalid/sansObjet/Undeclared.deca
{
    int x = 2020;
    x = b + 2 ;
}